syntax = "proto3";

package payment;

option go_package = "gen/paymentpb;paymentpb";

service PaymentService {
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc RefundPayment(RefundPaymentRequest) returns (RefundPaymentResponse);
}

message ProcessPaymentRequest {
  string order_id = 1;
}

message ProcessPaymentResponse {
  string payment_id = 1;
  string status = 2; // SUCCESS, FAILED
}

message RefundPaymentRequest {
  string payment_id = 1;
}

message RefundPaymentResponse {
  string status = 1; // REFUNDED
}
